--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,4 +73,4 @@ steps:
     playbookPathOnAgentMachine: './ansible/test.yml'
     inventoriesAgentMachine: 'file'
     inventoryFileOnAgentMachine: './ansible/inventory'
-  displayName: 'Ansible- Install'
+  displayName: 'Ansible- Test'
